2007-01-24  Joel Brobecker  <brobecker@adacore.com>

	* source.c (find_and_open_source): Try rewriting the source
	path inside filename if dirname is NULL.

2007-01-24  Joel Brobecker  <brobecker@adacore.com>

	* dwarf2read.c (add_partial_symbol): Create an extra partial
	symbol in the VAR_DOMAIN for Ada structures, unions or enums.
	(new_symbol): Likewise for symbols.

2007-01-24  Nick Roberts  <nickrob@snap.net.nz>

	* mi/mi-main.c (mi_cmd_execute): Call free_all_values.

2007-01-23  Vladimir Prus  <vladimir@codesourcery.com>
	
	* value.c (value_primitive_field): Copy the full 'location' 
	contents, instead of assuming that copying ADDRESS will 
	bring over everything in the union.  Remove obsolete comment.
	
2007-01-23  Masaki Muranaka  <monaka@monami-software.com>

	* m32c-tdep.c (make_regs, m32c_analyze_prologue)
	(m32c_skip_trampoline_code, m32c_m16c_address_to_pointer)
	(m32c_m16c_pointer_to_address): Separate code from declarations.

2007-01-23  Nick Hudson  <nick.hudson@dsl.pipex.com>

	* target.c (update_current_target): Correct typo.

2007-01-22  Masaki Muranaka  <monaka@monami-software.com>

	* xstormy16-tdep.c (xstormy16_skip_prologue): Separate code from a
	declaration.

2007-01-11  Andrew Cagney  <cagney@redhat.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>
	    Jan Kratochvil  <jan.kratochvil@redhat.com>

	* dwarf2-frame.c (execute_cfa_program): New support of
	`DW_CFA_GNU_negative_offset_extended'.

2007-01-21  Daniel Jacobowitz  <dan@codesourcery.com>

	* NEWS: Mention flash support for "load" and new remote packets.

2007-01-21  Markus Deuling  <deuling@de.ibm.com>

	* breakpoint.c (delete_command): Skip redundant loop iterations.

2007-01-21  Daniel Jacobowitz  <dan@codesourcery.com>

	* gdbarch.sh (register_type): Update comment.
	* gdbarch.h: Regenerated.
	* arch-utils.c (generic_register_size): Call register_type.
	* ia64-tdep.c (ia64_extract_return_value): Likewise.
	* m32c-tdep.c (check_for_saved): Likewise.