@@ -44,6 +44,7 @@ mi_prepare_inline_tests $srcfile
 mi_run_inline_test reference_update
 mi_run_inline_test base_in_reference
 mi_run_inline_test reference_to_pointer
+mi_run_inline_test reference_to_struct
 
 mi_gdb_exit
 return 0
